--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,18 @@
+name: test
+
 on:
   workflow_dispatch:
 
 jobs:
   node:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [16, 18, 20, latest]
     steps:
       - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.version }}
 
       - uses: actions/checkout@v4
 
@@ -14,8 +21,13 @@ jobs:
 
   deno:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [1.4, 1.37, latest]
     steps:
       - uses: denoland/setup-deno@v1
+        with:
+          deno-version: ${{ matrix.version }}
 
       - uses: actions/checkout@v4
 
@@ -24,8 +36,13 @@ jobs:
 
   bun:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [1.0.0, 1.0.6, latest]
     steps:
       - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: ${{ matrix.version }}
 
       - uses: actions/checkout@v4
 
