--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
   node:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         version: [16, 18, 20, latest]
     steps:
@@ -22,6 +23,7 @@ jobs:
   deno:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         version: [1.4, 1.37, latest]
     steps:
@@ -37,6 +39,7 @@ jobs:
   bun:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         version: [1.0.0, 1.0.6, latest]
     steps:
